wip: broken but attempted to make this work with tokio

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,14 @@ version = "0.1.0"
 clap = "2.29.2"
 failure = "0.1.1"
 pretty_env_logger = "0.2.0"
-tokio-core = "0.1.12"
+tokio-core = "0.1.14"
 futures = "0.1.18"
 parking_lot = "0.5.4"
 ctrlc = { version = "3.1.0", features = ["termination"] }
 log = "0.4.1"
+
+[replace]
+"tokio-core:0.1.14" = { git = "https://github.com/tokio-rs/tokio-core", branch = "set-context-for-run-future" }
 
 [dependencies.smith-aorta]
 path = "aorta"
