--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -19,7 +19,8 @@ parking_lot = "0.5.4"
 regex = "0.2.6"
 lazy_static = "1.0.0"
 serde_json = "1.0.10"
-tokio-core = "0.1.12"
+serde = "1.0.27"
+serde_derive = "1.0.27"
 
 [dependencies.smith-aorta]
 path = "../aorta"
