--- a/trove/Cargo.toml
+++ b/trove/Cargo.toml
@@ -14,13 +14,18 @@ failure_derive = "0.1.1"
 futures = "0.1.18"
 log = "0.4.1"
 parking_lot = "0.5.3"
-tokio-core = "0.1.12"
+tokio-core = "0.1.14"
 hyper = "0.11.18"
 hyper-tls = "0.1.2"
 native-tls = "0.1.5"
 serde_json = "1.0.10"
 serde = "1.0.27"
 serde_derive = "1.0.27"
+tokio = "0.1.2"
+tokio-timer = "0.1.2"
+
+[replace]
+"tokio-core:0.1.14" = { git = "https://github.com/tokio-rs/tokio-core", branch = "set-context-for-run-future" }
 
 [dependencies.smith-aorta]
 path = "../aorta"
