--- a/persistence/Cargo.toml
+++ b/persistence/Cargo.toml
@@ -14,6 +14,11 @@ failure_derive = "0.1.1"
 rocksdb = "0.10.0"
 serde = "1.0.55"
 serde_cbor = "0.8.2"
+serde_derive = "1.0.55"
+
+[dependencies.chrono]
+features = ["serde"]
+version = "0.4.2"
 
 [dependencies.semaphore-config]
 path = "../config"
